cmake_minimum_required(VERSION 4.0)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(leetcode main.cpp
        twoSum.cpp
        twoSum.h
        sumListNode.cpp
        sumListNode.h
        lengthOfLongestSubstring.cpp
        lengthOfLongestSubstring.h
        medianOfTwoSortedArrays.cpp
        medianOfTwoSortedArrays.h
        palindromeNumber.cpp
        palindromeNumber.h
        longestCommonPrefix.cpp
        longestCommonPrefix.h
        threeSum.cpp
        threeSum.h
        sumClosest3.cpp
        sumClosest3.h
        reverseInteger.c++
        reverseInteger.hpp
        isPalindrome.c++
        isPalindrome.hpp
        sum4.cpp
        sum4.h
        removeNthNodeFromEndOfList.cpp
        removeNthNodeFromEndOfList.h
        mergeTwoSortedLists.cpp
        mergeTwoSortedLists.h
        ListNode.h
        mergeSortedList.cpp
        mergeSortedList.h
        sortList.cpp
        sortList.h
        medianOfTwoSorted.cpp
        medianOfTwoSorted.h
        phoneNumberToLetter.cpp
        phoneNumberToLetter.h
        anagrams.cpp
        anagrams.h
        integerToRoman.cpp
        integerToRoman.h
        romanToInt.cpp
        romanToInt.h
        linkedListCycle.c++
        linkedListCycle.hpp
        intersectionOfTwoLinkedLists.c++
        intersectionOfTwoLinkedLists.hpp
)
